Change name of package

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
-    "name": "alan/sets",
+    "name": "amonger/sets",
+    "license": "mit",
     "authors": [
         {
             "name": "Alan Monger",
